<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="of">of</string>
    <string name="_0">0</string>
    <string name="enter_number">Enter number</string>
    <string name="what_is">What is</string>
    <string name="perc">%</string>
    <string name="calculate">CALCULATE</string>
    <string name="enter_percentage">Enter percentage</string>
</resources>
